--- a/gallery.html
+++ b/gallery.html
@@ -20,19 +20,20 @@
       position: relative;
     }
 
-    .main-heading {
-      font-size: 5.5rem;
+    .main-title {
+      text-align: center;
+      font-size: 3.8rem;
       font-weight: 900;
-      text-transform: uppercase;
-      letter-spacing: 8px;
-      margin: 0;
+      margin: 0 0 1rem;
       color: white;
+      letter-spacing: 4px;
+      text-transform: uppercase;
       text-shadow: 
-        0 0 20px rgba(0, 255, 0, 0.6),
-        0 0 40px rgba(0, 255, 0, 0.4),
-        0 0 80px rgba(0, 255, 0, 0.3),
-        0 10px 20px rgba(0, 0, 0, 0.8);
-      animation: glowPulse 4s ease-in-out infinite alternate;
+        0 0 15px #00ff00,
+        0 0 30px #00ff00,
+        0 0 60px #00ff00,
+        0 0 90px #00ff00,
+        0 5px 15px rgba(0, 100, 0, 0.8);
     }
 
     @keyframes glowPulse {
@@ -193,7 +194,7 @@
 
   <!-- Enhanced Title Section -->
   <div class="hero-title">
-    <h1 class="main-heading">Memories</h1>
+    <h1 class="main-title">Memories</h1>
     <p class="subtitle">Moments that stay with us <span>forever</span> — etched in green & maroon</p>
   </div>
 
